Поправлены ошибки в программе

--- a/NoteApp/NoteAppUI/MainForm.resx
+++ b/NoteApp/NoteAppUI/MainForm.resx
@@ -150,4 +150,80 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAgBAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAG5ubhd0dHRTdXV1VXV1dVV1dXVVdXV1VXV1
+        dVV1dXVVdXV1VXV1dVV1dXVVdXV1VXV1dVV1dXVVdXV1VXV1dVV1dXVVdXV1VXV1dVV1dXVVdXV1VXV1
+        dVV0dHRTbm5uFwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAdHR02nV1df91dXX/dXV1/3V1
+        df91dXX/dXV1/3V1df91dXX/dXV1/3V1df91dXX/dXV1/3V1df91dXX/dXV1/3V1df91dXX/dXV1/3V1
+        df91dXX/dXV1/3V1df90dHTaAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB1dXX/dXV1/3V1
+        df91dXX/dXV1/3V1df91dXX/dXV1/3V1df91dXX/dXV1/3V1df91dXX/dXV1/3V1df91dXX/dXV1/3V1
+        df91dXX/dXV1/3V1df91dXX/dXV1/3V1df8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHV1
+        df91dXX/dXV1xnJyclVycnJVc3NzxnV1df91dXX/cnJyVXJyclVycnJVcnJyVXJyclVycnJVcnJyVXJy
+        clVycnJVcnJyVXJyclVycnJVcnJyVXNzc8Z1dXX/dXV1/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAdXV1/3V1df91dXWqAAAAAAAAAAB0dHSpdXV1/3V1df8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAdHR0qXV1df91dXX/AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAB1dXX/dXV1/3V1daoAAAAAAAAAAHR0dKl1dXX/dXV1/wAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB0dHSpdXV1/3V1df8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAHV1df91dXX/dXV1qgAAAAAAAAAAdHR0qXV1df91dXX/AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHR0dKl1dXX/dXV1/wAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAdXV1/3V1df91dXWqAAAAAAAAAAB0dHSpdXV1/3V1
+        df8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAdHR0qXV1
+        df91dXX/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB1dXX/dXV1/3V1daoAAAAAAAAAAHR0
+        dKl1dXX/dXV1/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAB0dHSpdXV1/3V1df8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHV1df91dXX/dXV1qgAA
+        AAAAAAAAdHR0qXV1df91dXX/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAHR0dKl1dXX/dXV1/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAdXV1/3V1
+        df91dXWqAAAAAAAAAAB0dHSpdXV1/3V1df8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAdHR0qXV1df91dXX/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAB1dXX/dXV1/3V1daoAAAAAAAAAAHR0dKl1dXX/dXV1/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB0dHSpdXV1/3V1df8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAHV1df91dXX/dXV1qgAAAAAAAAAAdHR0qXV1df91dXX/AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHR0dKl1dXX/dXV1/wAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAdXV1/3V1df91dXWqAAAAAAAAAAB0dHSpdXV1/3V1df8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAdHR0qXV1df91dXX/AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB1dXX/dXV1/3V1daoAAAAAAAAAAHR0dKl1dXX/dXV1/wAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB0dHSpdXV1/3V1
+        df8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHV1df91dXX/dXV1qgAAAAAAAAAAdHR0qXV1
+        df91dXX/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHR0
+        dKl1dXX/dXV1/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAdXV1/3V1df91dXWqAAAAAAAA
+        AAB0dHSpdXV1/3V1df8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAdHR0qXV1df91dXX/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB1dXX/dXV1/3V1
+        daoAAAAAAAAAAHR0dKl1dXX/dXV1/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAB0dHSpdXV1/3V1df8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHV1
+        df91dXX/dXV1qgAAAAAAAAAAdHR0qXV1df91dXX/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAHR0dKl1dXX/dXV1/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAdXV1/3V1df91dXWqAAAAAAAAAAB0dHSpdXV1/3V1df8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAdHR0qXV1df91dXX/AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAB1dXX/dXV1/3V1daoAAAAAAAAAAHR0dKl1dXX/dXV1/wAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB0dHSpdXV1/3V1df8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAHV1df91dXX/dXV1qgAAAAAAAAAAdHR0qXV1df91dXX/AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHR0dKl1dXX/dXV1/wAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAdXV1/3V1df91dXWqAAAAAAAAAAB0dHSpdXV1/3V1
+        df8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAdHR0qXV1
+        df91dXX/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB1dXX/dXV1/3V1daoAAAAAAAAAAHR0
+        dKl1dXX/dXV1/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAB0dHSpdXV1/3V1df8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHV1df91dXX/dXV1xnV1
+        dVV1dXVVc3NzxnV1df91dXX/dXV1VXV1dVV1dXVVdXV1VXV1dVV1dXVVdXV1VXV1dVV1dXVVdXV1VXV1
+        dVV1dXVVdXV1VXNzc8Z1dXX/dXV1/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAdXV1/3V1
+        df91dXX/dXV1/3V1df91dXX/dXV1/3V1df91dXX/dXV1/3V1df91dXX/dXV1/3V1df91dXX/dXV1/3V1
+        df91dXX/dXV1/3V1df91dXX/dXV1/3V1df91dXX/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAB0dHTadXV1/3V1df91dXX/dXV1/3V1df91dXX/dXV1/3V1df91dXX/dXV1/3V1df91dXX/dXV1/3V1
+        df91dXX/dXV1/3V1df91dXX/dXV1/3V1df91dXX/dXV1/3R0dNoAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAG5ubhd0dHRTcnJyVXJyclVycnJVcnJyVXJyclVycnJVcnJyVXJyclVycnJVcnJyVXJy
+        clVycnJVcnJyVXJyclVycnJVcnJyVXJyclVycnJVcnJyVXJyclV0dHRTbm5uFwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA///////////wAAAP8AAAD/AAAA/wAAAP8Y//j/GP/4/xj/+P8Y//j/GP
+        /4/xj/+P8Y//j/GP/4/xj/+P8Y//j/GP/4/xj/+P8Y//j/GP/4/xj/+P8Y//j/GP/4/xj/+P8Y//j/GP
+        /4/wAAAP8AAAD/AAAA/wAAAP//////////8=
+</value>
+  </data>
 </root>
